--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "04-backend-server",
   "version": "1.0.0",
-  "description": "Recuerden ejecutar",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon index.js"
@@ -12,11 +12,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^8.6.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.11"
-  },
-  "devDependencies": {}
+    "mongoose": "^5.9.21"
+  }
 }
