--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@
 PORT=3000
 DB_CNN=mongodb+srv://mean_user:AJge9XAtC0oB3A4n@cluster0.p2za4.mongodb.net/hospitaldb
 JWT_SECRET=Holsdj28397kjHd7@asdyui3897k
+
+GOOGLE_ID=317346773044-0pp79420hskvseqqgg1oergnajacnu5e.apps.googleusercontent.com
+GOOGLE_SECRET=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
